<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="enterName">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="question">What country does this flag belong to?</string>
    <string name="submit">Submit</string>
    <string name="content_description">Quiz Image</string>
    <string name="result">Result</string>
    <string name="trophy">Trophy image</string>
    <string name="congrats">Hey, Congratulations</string>
    <string name="finish">Finish</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
</resources>