<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="@drawable/ic_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="25sp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="275dp"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/trophy"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Vitor"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Your score is 2 out of 10."
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/btnColor"
        android:layout_marginTop="10dp"
        />

</LinearLayout>