<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelActivity"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose the level:"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:text="@string/easy"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/easyBronze"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:text="@string/medium"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/mediumSilver"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:text="@string/hard"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/hardGold"
        android:layout_marginBottom="30dp"
        />

</LinearLayout>