<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            tools:text="@string/question"
            android:textSize="22sp"
            android:textColor="@color/welColor"
            />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_description"
            tools:src="@drawable/ic_flag_of_chile"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="50dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:indeterminate="false"
                android:max="10"
                android:progress="1"
                />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                tools:text="1/10"
                android:textSize="14sp"
                android:textColor="@color/enterNameColor"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tvOptionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            tools:text="Option1"
            android:textSize="18sp"
            android:textColor="@color/enterNameColor"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="15dp"
            />

        <TextView
            android:id="@+id/tvOptionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            tools:text="Option2"
            android:textSize="18sp"
            android:textColor="@color/enterNameColor"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="15dp"
            />

        <TextView
            android:id="@+id/tvOptionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            tools:text="Option3"
            android:textSize="18sp"
            android:textColor="@color/enterNameColor"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="15dp"
            />

        <TextView
            android:id="@+id/tvOptionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_option_border_bg"
            tools:text="Option4"
            android:textSize="18sp"
            android:textColor="@color/enterNameColor"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="15dp"
            />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/btnColor"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</ScrollView>